--- a/XFramework.Site.Home/XFramework.Site.Home.csproj
+++ b/XFramework.Site.Home/XFramework.Site.Home.csproj
@@ -235,16 +235,16 @@
     <Content Include="Language\en.xml" />
     <Content Include="Language\zh_cn.xml" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\jquery-1.4.4.min.js" />
     <Content Include="Scripts\jquery.min.js" />
     <Content Include="Scripts\jquery.slides.js" />
-    <Content Include="Scripts\FlashFocus.swf" />
+    <Content Include="Scripts\jquery.ticker.js" />
     <Content Include="Scripts\swfupload\handlers.js" />
     <Content Include="Scripts\swfupload\swfupload.js" />
     <Content Include="Scripts\swfupload\swfupload.swf" />
     <Content Include="Scripts\swfupload\swfupload_fp9.swf" />
     <Content Include="Styles\bootstrap.min.css" />
     <Content Include="Styles\site.css" />
+    <Content Include="Styles\ticker.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -371,6 +371,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Front\Views\Product\Detail.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Front\Views\Shared\_ProductLayout.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
